# book-network-ui/src/app/services/models/book-transaction-response.ts
@@ -2,8 +2,10 @@
 /* eslint-disable */
 export interface BookTransactionResponse {
   author?: string;
+  coverImage?: Array<string>;
   id?: number;
   isbn?: string;
+  owner?: string;
   rate?: number;
   returnApprove?: boolean;
   returned?: boolean;
